--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,5 +1,8 @@
-<html>
+<!doctype html>
+
+<html lang="en">
     <head>
+        <meta charset="utf-8">
         <title>Secrets</title>
     </head>
 
